# FaspHeuristic

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  projectId.sh
benchmark/: CMakeLists.txt  main.cpp
benchmark/benchmarks/: benchmarkInfo.md
benchmark/benchmarks/FASP-benchmarks/: README.md
benchmark/benchmarks/FASP-benchmarks/data/: README.md
benchmark/benchmarks/FASP-benchmarks/graph-generators/: FASGenerators.nb  FASImportExport.nb
benchmark/benchmarks/FASP-benchmarks/summaries/: README.md  summary-superalg.json  summary.json
benchmark/benchmarks/benchCircuits/ibm/: ibm01.al  ibm01.timing  ibm02.al  ibm02.timing  ibm03.al  ibm03.timing  ibm04.al  ibm04.timing  ibm05.al  ibm05.mfas  ibm05.timing  ibm06.al  ibm06.timing  ibm07.al  ibm07.timing  ibm08.al  ibm08.timing  ibm09.al  ibm09.timing  ibm10.al  ibm10.timing  ibm11.al  ibm11.timing  ibm12.al  ibm12.timing  ibm13.al  ibm13.timing  ibm14.al  ibm14.timing  ibm15.timing  ibm16.timing  ibm17.timing  ibm18.timing
benchmark/benchmarks/benchCircuits/iscas/: bigkey.al  bigkey.mfas  bigkey.timing  daio_receiver.al  daio_receiver.mfas  dsip.al  dsip.timing  ecc.al  ecc.mfas  mm30a.al  mm30a.mfas  mm30a.timing  mm4a.al  mm4a.mfas  mm9a.al  mm9a.mfas  mm9a.timing  mm9b.al  mm9b.mfas  mult16a.al  mult16a.mfas  mult16b.al  mult16b.mfas  mult32a.al  mult32a.mfas  parker1986.al  parker1986.mfas  parker1986.timing  phase_decoder.al  phase_decoder.mfas  phase_decoder.timing  s1423.al  s1423.mfas  s1423.timing  s208.al  s208.mfas  s27.al  s27.mfas  s344.al  s344.mfas  (+35 more)
benchmark/benchmarks/benchCircuits/results/: README.txt  ibm05.h5  iscasUnweighted.h5  iscasWeighted.h5
benchmark/benchmarks/benchGraphsFromPaper/: benchGraphsFromPaper.h
benchmark/benchmarks/benchGraphsFromPaper/data/: Heavy water subgraph (opt=6).graph.txt  Problem 10 (opt=12).graph.txt  Problem 3 (opt=6).graph.txt  Problem 4 (opt=6).graph.txt  Problem 5 (opt=3).graph.txt  Problem 6 (opt=5).graph.txt  Problem 7 (opt=3).graph.txt  Problem 9 (opt=8).graph.txt  Subproblem 8 (opt=3).graph.txt
benchmark/benchmarks/benchHeuristics/: benchHeuristics.h
benchmark/benchmarks/benchHeuristics/data/: HeuristicsConstWeightVarFaspConstVE_v_15_e_30_f_1-15_s_15_log__r_1000.h5  HeuristicsConstWeightVarFaspConstVE_v_30_e_120_f_1-30_s_20_log__r_1000.h5  HeuristicsConstWeightVarFaspConstVE_v_30_e_180_f_1-30_s_20_log__r_1000.h5  HeuristicsConstWeightVarFaspConstVE_v_50_e_100_f_1-30_s_20_log__r_1000.h5  HeuristicsConstWeightVarFaspConstVE_v_50_e_200_f_1-30_s_20_log__r_1000.h5
benchmark/benchmarks/benchILPvsHEURISTIC/: benchILPvsHEURISTIC.h
benchmark/benchmarks/benchILPvsHEURISTIC/data/: de-bruijn.h5  kautz-2.h5  kautz.h5  planar-triangulations.h5
benchmark/benchmarks/benchIsoCut/: benchIsoCut.h
benchmark/benchmarks/benchIsoCut/data/: SuperAlgorithmConstWeightVarFaspConstVE_v_15_e_105_f_1-15_s_15_r_1000.h5  SuperAlgorithmConstWeightVarFaspConstVE_v_30_e_120_f_1-30_s_20_r_1000.h5  SuperAlgorithmConstWeightVarFaspConstVE_v_30_e_60_f_1-30_s_20_r_1000.h5  SuperAlgorithmConstWeightVarFaspConstVE_v_50_e_200_f_1-30_s_20_r_1000.h5
benchmark/benchmarks/benchResultsDistribution/data/: HeuristicsConstWeightVarFaspConstVE_v_50_e_100_f_1-20_s_20lin_r_100.h5
benchmark/benchmarks/benchScalability/: benchScalability.m
benchmark/benchmarks/benchTiming/: benchTiming.m  benchTimingConstFaspVarVE.m
benchmark/benchmarks/benchTiming/data/: NewTimingConstWeightVarFaspConstVE_v_1000_e_2000_f_1-30_s_15_lin__r_20.h5  NewTimingConstWeightVarFaspConstVE_v_1500_e_2500_f_1-30_s_15_lin__r_20.h5  NewTimingConstWeightVarFaspConstVE_v_1500_e_2500_f_1-50_s_10_lin__r_20.h5  NewTimingConstWeightVarFaspConstVE_v_1500_e_3000_f_1-51_s_26_lin__r_200.h5  NewTimingConstWeightVarFaspConstVE_v_2000_e_3000_f_1-40_s_21_lin__r_20.h5  NewTimingConstWeightVarFaspConstVE_v_3000_e_5000_f_1-51_s_26_lin__r_200.h5  NewTimingConstWeightVarFaspConstVE_v_500_e_1500_f_1-20_s_20_lin__r_10.h5  NewTimingConstWeightVarFaspConstVE_v_60_e_120_f_1-20_s_20_lin__r_200.h5  TimingConstWeightAndFaspVarVE_v_20-200_d_2_f_5_s_19lin_r_200.h5  TimingConstWeightAndFaspVarVE_v_20-200_d_3_f_10_s_19lin_r_200.h5  TimingConstWeightAndFaspVarVE_v_20-200_d_4_f_10_s_19lin_r_200.h5  TimingConstWeightAndFaspVarVE_v_20-200_d_4_f_5_s_19lin_r_200.h5  TimingConstWeightAndFaspVarVE_v_20-200_d_5_f_5_s_19lin_r_200.h5  TimingConstWeightVarFaspConstVE_v_30_e_120_f_1-20_s_20_lin__r_200.h5  TimingConstWeightVarFaspConstVE_v_30_e_150_f_1-20_s_20_lin__r_200.h5  TimingConstWeightVarFaspConstVE_v_30_e_60_f_1-20_s_20_lin__r_200.h5  TimingConstWeightVarFaspConstVE_v_60_e_120_f_1-20_s_20_lin__r_200.h5  TimingConstWeightVarFaspConstVE_v_60_e_180_f_1-20_s_20_lin__r_200.h5
benchmark/benchmarks/benchWeights/data/: TimingVarWeightVarFaspConstVE_v_100_e_150_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_100_e_350_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_100_e_500_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_200_e_400_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_200_e_800_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_300_e_1050_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_300_e_1200_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_300_e_1350_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_300_e_600_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_300_e_750_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_300_e_900_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_400_e_1800_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_400_e_600_f_1-41_s_21_lin__r_100.h5  TimingVarWeightVarFaspConstVE_v_500_e_1000_f_1-41_s_21_lin__r_100.h5  (+2 more)
benchmark/benchmarks/matlabHelpers/: loadHDF5.m
benchmark/tclap/: CmdLine.h
benchmark/tools/: prettyprint.h  timer.h
test/: CMakeLists.txt  TestDynamicBitset.cpp  TestGraph.cpp  TestGraphFasp.cpp  TestGraphIO.cpp  TestStack.cpp
test/cmake/: GoogleTestCMakeLists.txt.in
tools/: CMakeLists.txt  tightCut.cpp  tightCutWeighted.cpp
(+27087 files in other folders)
